# k-butler

./: .bumpversion.cfg  .envrc.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
docs/: design.drawio
src/k_butler/: controller.py  filesbo.py  runner.py  start.py
src/k_butler/components/: common.py
src/k_butler/configuration/: __global__.example.yaml  __init__.py
src/k_butler/pages/: home.py
src/k_butler/strategies/: base.py  sw_payroll.py  utils.py
src/k_butler/strategies/clipboard/: __init__.py  drawio.py
src/k_butler/strategies/files/sw_payroll/: sw_payroll.py
src/k_butler/strategies/files/sw_payroll/configuration/: __init__.py  example.yaml
src/k_butler/strategies/sw_payroll/: __init__.py
src/k_butler/styles/: tabs.py
src/k_butler/tabs/: clipboard.py  config.py  core.py
src/k_butler/widgets/: markdown_widget.py  tab_widget.py  tabs_widget.py
src/k_butler/windows/: common.py  file_handler.py
tests/: .coveragerc
tests/examples/kt_buste_paga/: kt_buste_paga.docx
tests/unit/: conftest.py  test_common_component.py  test_configuration.py  test_filesbo.py
tests/unit/Ui/: test_common_component.py
